<resources>
    <string name="syst_config">System</string>
    <string name="sytem_ui_control">UIControl</string>
    <string name="sytem_ui_control_reset">System Reset</string>
    <string name="sytem_ui_control_brightness">Bringhtness contuol</string>
    <string name="sytem_ui_control_standby_time">Standby time</string>
    <string name="sytem_password">System Password</string>
    <string name="sytem_password_ensure">Confirm</string>
    <string name="sytem_password_setting">System Password Seting</string>
    <string name="sytem_password_originalpassword_seting">Original Passwords:</string>
    <string name="sytem_password_newpassword_seting">New Passwords:</string>
    <string name="sytem_password_confirmpassword_seting">Confirm Passwords:</string>
    <string name="sytem_security">System Security</string>
    <string name="sytem_security_remender_play">Play the video is Linsense validation</string>
    <string name="sytem_security_remender_addvideo">Video signal is increased Linsense validation</string>
    <string name="sytem_security_validation">Verification</string>
    <string name="system_diagnosis">System Diagnosis</string>
    <string name="system_diagnosis_text">Stepless Adjustment</string>
    <string name="system_diagnosis_function">System Diagnostic Capabilities</string>
    <string name="system_diagnosis_communication">Communication Diagnosis</string>
    <string name="system_diagnosis_RotaryKnob">RotaryKnob</string>
    <string name="system_network_config">Network Settings</string>
    <string name="system_network">System_Network</string>
    <string name="system_network_mac_add">MAC ADDRESS:</string>
    <string name="system_network_ip_add">IP ADDRESS:</string>
    <string name="system_network_ip_port">Port:</string>
    <string name="system_network_connectstate">Connection Status:</string>
    <string name="system_network_connectnormal">Normal</string>
    <string name="system_network_connectcounts">Connection count:</string>
    <string name="system_network_dhcp">DHCP</string>
    <string name="system_network_static">Static</string>
    <string name="system_network_gateway">Gateway:</string>
    <string name="system_network_subnetmask">subnet mask:</string>
    <string name="system_network_dns_address">DNS ADDRESS:</string>
    <string name="system_reset">System Reset</string>
    <string name="system_reset_funtion">System Reset Function</string>
    <string name="system_reset_defaultset">Restore factory settings</string>
    <string name="system_reset_tip">Restore factory settings,all boards will restore the factory default parameters,and restart the system
</string>
    <string name="system_update">System Update</string>
    <string name="system_update_mod">System Upgrade Module</string>
    <string name="system_apk_update">Program upgrade</string>
    <string name="system_acq_update">Acq card upgrade</string>
    <string name="system_send_update">Send card upgrade</string>
    <string name="system_sys_update">Syscard upgrade</string>
    <string name="system_language">Language Settings</string>
    <string name="leddisplay_config_texts">LEDDisplay Configuration</string>
    <string name="leddisplay_connection_config">ConnectChart Configuration</string>
    <string name="led_pianx_set">OffSetX:</string>
    <string name="led_pianY_set">OffSetY:</string>
    <string name="led_cut_Offsetx_set">Cut OffSetX:</string>
    <string name="led_cut_OffsetY_set">Cut OffSetY:</string>
    <string name="led_Resolution_set">Resolution:</string>
    <string name="led_frame_frequency_set">Frame frequency:</string>
    <string name="led_frame_read">Read</string>
    <string name="led_frame_readInformation">ReadInformation:</string>
    <string name="text_hardware_change">Hardware configuration change</string>
    <string name="text_hardware_insert">A newly inserted card</string>
    <string name="text_acqcard_config_diff">The current configuration and the current configuration of different acquisition card</string>
    <string name="text_sendcard_config_diff">The current configuration and the current configuration of different send card</string>
    <string name="text_hardware_insert_slot_channege">Hardware card configuration and the last saved configuration inconsistencies 
        Are you sure you want to delete all configurations to save the original re configuration, click yes clear configuration,click no to the hardware card changed to the last configuration,close and re open software</string>
    <string name="tv_leddisplay1_pixset">LED1:Resolution</string>
    <string name="tv_leddisplay1_connection">LED:Connection</string>
    <string name="tv_channel_syscard">SystemCard Configure:SystemCard</string>
    <string name="tv_interface_send_card">Interface Configure:SendCard1_1</string>
    <string name="tv_channel_capture_card">Channel Configure:CaptureCard1_1</string>
    <string name="tv_syscard">SystemCard</string>
    <string name="tv_send_card">SendCard</string>
    <string name="tv_capture_card">AcquisitionCard</string>
    <string name="et_leddisplay_setup">LED Displayer:setup</string>
    <string name="btn_cabinet">CabinetLibrary</string>
    <string name="btn_group_switch">GroupSwitch</string>
    <string name="btn_group_channel">GroupChannel</string>
    <string name="text_group_tips">NO GROUP SAVED</string>
    <string name="btn_channel_group">Groups</string>
    <string name="btn_group_del">Delete</string>
    <string name="btn_groupdata_del">Delete groups data</string>
    <string name="btn_cbsdata_del">Delete Cabinetseries data will delete all of the Cabinets,sure to delete or cancel?</string>
    <string name="btn_cbsdata_sync">No file cabinet series and enclosure, please</string>
    <string name="btn_cbseries_manage">Cabinet series management</string>
    <string name="text_update_success">Upgrade successful</string>
    <string name="text_updatesuccess_reset">Upgrade successfully, please restart the system after power</string>
    <string name="btn_sure">EnSure</string>
    <string name="btn_next">Next</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="led_width_set">W: </string>
    <string name="led_height_set">H: </string>
    <string name="tv_cabinet_info">Cabinet Info</string>
    <string name="tv_scancard_info">Scancard Info</string>
    <string name="tv_monitorcard_info">Monitorcard Info</string>
    <string name="tv_model_x">Model Info </string>
    <string name="et_leddisplay">LED Displayer</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="app_name">ak10</string>
    <string name="tv_rename">Rename:</string>
    <string name="tv_time"> Duration：</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ss">default</string>
    <string name="humi_unit">%</string>
    <string name="save">save</string>
    <string name="control_save">Whether to save the current parameters to the LED？</string>
    <string name="zoom">Zoom</string>
    <string name="monitor_read">Read</string>
    <string name="monitor_set">Set</string>
    <string name="monitor_temp">Tempreture</string>
    <string name="monitor_humity">Humity</string>
    <string name="monitor_bright">Brightness</string>
    <string name="monitor_connect_state_connection">Connect!!</string>
    <string name="monitor_connect_state_disconnection">Disconnect!!</string>
    <string name="monitor_connect_state_backup">Backup</string>
    <string name="monitor_connect_state_show">StateShow</string>
    <string name="numberunit">pc</string>
    <string name="monitorconfig_autocircle">Circulation</string>
    <string name="monitorconfig_tempalarm">Tempreture threshold</string>
    <string name="monitorconfig_humialarm">Humity threshold</string>
    <string name="config_acquisitioncard_hdmich">HDMI Channel:</string>
    <string name="monitorconfig_badlightnum">Dead lights of LED</string>
    <string name="monitorconfig_badlightnum_cabinet">Dead lights of Cabinet</string>
    <string name="monitor_environment_setting">Environment</string>
    <string name="monitor_cabinet_setting">Cabinet</string>
    <string name="monitor_commonstate">Normal</string>
    <string name="monitor_overtemperature">overheat</string>
    <string name="monitor_superwet">SuperWet</string>
    <string name="monitor_bad_lamp">Bad lamp</string>
    <string name="monitor_exception">Exception</string>
    <string name="monitor_connect_state">Con Status</string>
    <string name="group_channel_manage">Group Manage</string>
    <string name="group_channel_manage_list">Groups Manage List</string>
    <string name="language_setting">Language setting</string>
    <string name="Debug_Entrance">Debugging entrance</string>
    <string name="resetdata">Reset Data</string>
    <string name="Control_title">Control</string>
    <string name="Control_config">Control Configure</string>
    <string name="Monitor_title">Monitor</string>
    <string name="Monitor_config">Monitor Configure</string>
    <string name="Player_title">Player</string>
    <string name="Player_config">Player Configure</string>
    <string name="Test_title">Test</string>
    <string name="Test_config">Test Configure</string>
    <string name="Control_Open">Open</string>
    <string name="Control_Write">Write</string>
    <string name="Control_Read">Read</string>
    <string name="Control_Close">Close</string>
    <string name="Control_OFF">OFF</string>
    <string name="Control_ZOOM">ZOOM</string>
    <string name="Control_Bright">BRIGHT</string>
    <string name="Control_CT">ColTEMP</string>
    <string name="Control_SATA">SATA</string>
    <string name="Control_CONT">CONT</string>
    <string name="leddisplay_cabinetadd_Series">Series:</string>
    <string name="leddisplay_cabinetadd_Model">Mode:</string>
    <string name="leddisplay_cabinetadd_Row">Row:</string>
    <string name="leddisplay_cabinetadd_List">Column:</string>
    <string name="leddisplay_cabinetadd_Confirm">Confirm</string>
    <string name="leddisplay_cabinetadd_Cancel">Cancel</string>
    <string name="leddisplay_cabinetadd_showtoolbar">Show tools</string>
    <string name="leddisplay_cabinetadd_hidetoolbar">Hide tools</string>
    <string name="leddisplay_cabinetinfor_Synchro">Synchro</string>
    <string name="leddisplay_cabinetinfor_manage">Cbtlib Manage</string>
    <string name="leddisplay_cabinet_manage">Cabinet Manage</string>
    <string name="leddisplay_cabinetseries_manage">CabinetSeries Manage</string>
    <string name="leddisplay_cabinet_add">Add Cabinet</string>
    <string name="cabinet_add_text">Add</string>
    <string name="cabinet_del_text">Delete</string>
    <string name="cabinet_save_text">Save</string>
    <string name="cabinet_next_text">Next</string>
    <string name="cabinet_back_text">Back</string>
    <string name="btn_back_list">Back</string>
    <string name="titleFilePath">File Path:</string>
    <string name="titleCardList">Card Select</string>
    <string name="Close">Close</string>
    <string name="set">Set</string>
    <string name="SysCfg_LeftAndRight">Left and right</string>
    <string name="SysCfg_TopAndButton">Top and button</string>
    <string name="SysCfg_FrameSeq">Frame sequential</string>
    <string name="SysCfg_SyncDelay">Synchron Delay(-127~127):</string>
    <string name="SysCfg_DisScanCycle">Disable Scan Cycle(0~255):</string>
    <string name="SysCfg_3D">3D</string>
    <string name="text_send1">SND_1</string>
    <string name="text_send2">SND_2</string>
    <string name="text_send3">SND_3</string>
    <string name="text_send4">SND_4</string>
    <string name="text_send5">SND_5</string>
    <string name="text_send6">SND_6</string>
    <string name="text_send7">SND_7</string>
    <string name="text_send8">SND_8</string>
    <string name="text_send9">SND_9</string>
    <string name="text_send10">SND_10</string>
    <string name="text_DHCP">DHCP</string>
</resources>