<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

	   	<CheckBox
	        android:id="@+id/checkBox3D"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_marginLeft="50dp"
	        android:text="@string/SysCfg_3D"
	        android:textSize="25sp" />
	    
	    <RadioButton
	        android:id="@+id/radioButton_LeftAndRight"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="50dp"
	        android:text="@string/SysCfg_LeftAndRight"
	        android:textSize="25sp"/>    

	    <RadioButton
	        android:id="@+id/radioButton_TopAndButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="50dp"
	        android:text="@string/SysCfg_TopAndButton"
	        android:textSize="25sp"/>
	       
	    <RadioButton
	        android:id="@+id/radioButton_FrameSeq"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="50dp"
	        android:text="@string/SysCfg_FrameSeq"
	        android:textSize="25sp"/> 	            
    </LinearLayout>
       
	<LinearLayout
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="780dp"
        android:orientation="horizontal" >
	    <Button
            android:id="@+id/btn3DSet"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/set" />
    </LinearLayout>
    	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp" >
	    
	    <TextView
            android:id="@+id/SynchronDelay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"  
            android:layout_marginLeft="50dp"
            android:text="@string/SysCfg_SyncDelay"
            android:textSize="@dimen/size25" />
        <EditText
            android:id="@+id/editSysCfg_SyncDelay"
            android:layout_width="100dp"
            android:layout_height="wrap_content"     
            android:layout_marginLeft="5dp"
            android:hint="@null"
            android:imeOptions="actionNext"      
            android:ems="10" >
        </EditText>
        <TextView
            android:id="@+id/DisScanCycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="right"
            android:text="@string/SysCfg_DisScanCycle"
            android:textSize="@dimen/size25" />
        <EditText
            android:id="@+id/editSysCfg_DisScanCycle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@null"
            android:imeOptions="actionNext"      
            android:ems="10" >
        </EditText>  
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="600dp" >
        <Button
            android:id="@+id/btn3DCfgSet"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/set" />
        <Button
            android:id="@+id/btn3DCfgSave"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/save" />   
    </LinearLayout>
</LinearLayout>