<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/uicontrol"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

            <TextView
            android:id="@+id/txtVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textSize="25sp"
            android:layout_marginTop="5dp" />
            
            <Button
                android:id="@+id/apkupgratebtn"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:text="@string/system_apk_update"
                android:textSize="22sp" />

            <Button
                android:id="@+id/ACQupgrade"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/system_acq_update"
                android:textSize="22sp"/>

            <Button
                android:id="@+id/SYSupgrade"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/system_sys_update"
                android:textSize="22sp" />

            <Button
                android:id="@+id/SENDupgrade"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/system_send_update"
               	android:textSize="22sp" />

 </LinearLayout>
 


